@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.9 2003/02/06 06:49:09 briggs Exp $
+$NetBSD: distinfo,v 1.10 2003/03/17 17:31:37 hubertf Exp $
 
-SHA1 (xlockmore-5.06.tar.bz2) = d48db3ef2a94222525ab5f753ecb7cfbb77dcb29
-Size (xlockmore-5.06.tar.bz2) = 1538481 bytes
+SHA1 (xlockmore-5.07.tar.bz2) = 6a462e45e93ca6127279a6bba3fda1a6eb4dbf62
+Size (xlockmore-5.07.tar.bz2) = 1555654 bytes
 SHA1 (patch-aa) = 2d533dab923e0de20838c96e9b6e455fb2d724f8
 SHA1 (patch-ab) = 3f4006969c2ae1427606e8e451295350fdffda90
 SHA1 (patch-ac) = 875c4fc5ae98cfe389852891997e724f450f526f
