@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.1670 2003/03/17 16:09:22 taya Exp $
+$NetBSD: CHANGES,v 1.1671 2003/03/17 17:31:35 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -1171,3 +1171,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Added vcheck-1.2.1 [seb 2003-03-17]
 	Added openal-20030125 [jmmv 2003-03-17]
 	Updated mozilla to 1.3 [taya 2003-03-17]
+	Updated xlockmore to 5.07 [hubertf 2003-03-17]
